# PlantDoctor

./: .flake8  .gitignore  .mypy.ini  README.md  main.py  pyproject.toml
apps/users/: routes.py  schemas.py
common/constant/: depends.py
common/exceptions/: exceptions.py
common/models/: __init__.py  alembic.ini  base.py  plants.py  users.py
common/models/migrations/: env.py
common/models/migrations/versions/: 2023-07-02-5542df920dce-init.py
common/schemas/: exceptions.py
common/utils/: timezone.py
core/: auth.py  config.py  db.py  fastapi.py
core/handlers/: __init__.py  exception_handler.py
dags/address/: main.go
dags/foreWeather/: main.go
dags/foreWeather/weather/: weather.go
web/finalproject/: settings.py  views.py
web/finalproject/templates/: plantinfo.html  plantmanage.html
web/finalproject/templates/plantimage/: plantrecog.html
web/finalproject/templates/search_app/: info.html  search.html
web/plantimage/: views.py
web/plantimage/migrations/: 0001_initial.py
